src/test/ui/consts/min_const_fn/promotion.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promotion.rs:11:27
   |
LL |     let x: &'static () = &foo1();
   |            -----------    ^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promotion.rs:12:28
   |
LL |     let y: &'static i32 = &foo2(42);
   |            ------------    ^^^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promotion.rs:13:28
   |
LL |     let z: &'static i32 = &foo3();
   |            ------------    ^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promotion.rs:14:34
   |
LL |     let a: &'static Cell<i32> = &foo4();
   |            ------------------    ^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promotion.rs:15:42
   |
LL |     let a: &'static Option<Cell<i32>> = &foo5();
   |            --------------------------    ^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL |     let a: &'static Option<Cell<i32>> = &foo6();
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promotion.rs:16:42
   |
LL |     let a: &'static Option<Cell<i32>> = &foo6();
   |            --------------------------    ^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0716`.
